# SmartHomeSystem

./: CMakeLists.txt  README.md  qml.qrc
qml/: DeviceTile.qml  Main.qml
src/: devicemanager.cpp  devicemanager.h  devicesmodel.cpp  devicesmodel.h  main.cpp
